@@ -1,9 +1,8 @@
 package org.cryptomator.jfuse.linux.amd64;
 
-import org.cryptomator.jfuse.linux.amd64.extr.fuse_args;
-import org.cryptomator.jfuse.linux.amd64.extr.ll.fuse_cmdline_opts;
+import org.cryptomator.jfuse.linux.amd64.extr.fuse3.fuse_args;
+import org.cryptomator.jfuse.linux.amd64.extr.fuse3_lowlevel.fuse_cmdline_opts;
 
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.ValueLayout;
 
@@ -12,24 +11,36 @@ record FuseArgs(MemorySegment args, MemorySegment cmdLineOpts) {
 	@Override
 	public String toString() {
 		var sb = new StringBuilder();
-		var argc = fuse_args.argc$get(args);
-		var argv = fuse_args.argv$get(args);
+		var argc = fuse_args.argc(args);
+		var argv = fuse_args.argv(args);
 		for (int i = 0; i < argc; i++) {
-			var cString = argv.getAtIndex(ValueLayout.ADDRESS, i);
-			sb.append("arg[").append(i).append("] = ").append(cString.getUtf8String(0)).append(", ");
+			var cString = argv.getAtIndex(ValueLayout.ADDRESS, i).reinterpret(Long.MAX_VALUE);
+			sb.append("arg[").append(i).append("] = ").append(cString.getString(0)).append(", ");
 		}
-		sb.append("mountPoint = ").append(mountPoint().getUtf8String(0));
-		sb.append("debug = ").append(fuse_cmdline_opts.debug$get(cmdLineOpts));
+		sb.append("mountPoint = ").append(mountPoint().getString(0));
+		sb.append("debug = ").append(fuse_cmdline_opts.debug(cmdLineOpts));
 		sb.append("singlethreaded = ").append(!multithreaded());
 		return sb.toString();
 	}
 
-	public MemoryAddress mountPoint() {
-		return fuse_cmdline_opts.mountpoint$get(cmdLineOpts);
+	public MemorySegment mountPoint() {
+		return fuse_cmdline_opts.mountpoint(cmdLineOpts);
 	}
 
 	public boolean multithreaded() {
-		return fuse_cmdline_opts.singlethread$get(cmdLineOpts) == 0;
+		return fuse_cmdline_opts.singlethread(cmdLineOpts) == 0;
+	}
+
+	public int cloneFd() {
+		return fuse_cmdline_opts.clone_fd(cmdLineOpts);
+	}
+
+	public int maxIdleThreads() {
+		return fuse_cmdline_opts.max_idle_threads(cmdLineOpts);
+	}
+
+	public int maxThreads() {
+		return fuse_cmdline_opts.max_threads(cmdLineOpts);
 	}
 
 }
