@@ -1,25 +1,41 @@
 package org.cryptomator.jfuse.linux.amd64;
 
 import org.cryptomator.jfuse.api.FuseMount;
-import org.cryptomator.jfuse.linux.amd64.extr.fuse_h;
-import org.cryptomator.jfuse.linux.amd64.extr.fuse_loop_config;
+import org.cryptomator.jfuse.linux.amd64.extr.fuse3.fuse_h;
+import org.cryptomator.jfuse.linux.amd64.extr.fuse3.fuse_loop_config_v1;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 
-record FuseMountImpl(MemoryAddress fuse, FuseArgs fuseArgs) implements FuseMount {
+record FuseMountImpl(MemorySegment fuse, FuseArgs fuseArgs) implements FuseMount {
+
+	private static final int FUSE_3_2 = 32;
+	private static final int FUSE_3_12 = 312;
 
 	@Override
 	public int loop() {
-		if (fuseArgs.multithreaded()) {
-			try (var scope = MemorySession.openConfined()) {
-				var loopCfg = fuse_loop_config.allocate(scope);
-				fuse_loop_config.clone_fd$set(loopCfg, 0);
-				fuse_loop_config.max_idle_threads$set(loopCfg, 10);
+		// depends on fuse version: https://github.com/libfuse/libfuse/blob/fuse-3.12.0/include/fuse.h#L1011-L1050
+		if (!fuseArgs.multithreaded() || fuse_h.fuse_version() < FUSE_3_2) {
+			// FUSE 3.1: to keep things simple, we just don't support fuse_loop_mt
+			return fuse_h.fuse_loop(fuse);
+		} else if (fuse_h.fuse_version() < FUSE_3_12) {
+			// FUSE 3.2
+			try (var arena = Arena.ofConfined()) {
+				var loopCfg = fuse_loop_config_v1.allocate(arena);
+				fuse_loop_config_v1.clone_fd(loopCfg, fuseArgs.cloneFd());
+				fuse_loop_config_v1.max_idle_threads(loopCfg, fuseArgs.maxIdleThreads());
 				return fuse_h.fuse_loop_mt(fuse, loopCfg);
 			}
 		} else {
-			return fuse_h.fuse_loop(fuse);
+			// FUSE 3.12
+			var loopCfg = fuse_h.fuse_loop_cfg_create();
+			try {
+				fuse_h.fuse_loop_cfg_set_clone_fd(loopCfg, fuseArgs.cloneFd());
+				fuse_h.fuse_loop_cfg_set_max_threads(loopCfg, fuseArgs.maxThreads());
+				return fuse_h.fuse_loop_mt(fuse, loopCfg);
+			} finally {
+				fuse_h.fuse_loop_cfg_destroy(loopCfg);
+			}
 		}
 	}
 
