@@ -1,11 +1,9 @@
 package org.cryptomator.jfuse.linux.amd64;
 
-import java.lang.foreign.Addressable;
+import java.lang.foreign.Arena;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.Linker;
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.SymbolLookup;
 import java.lang.invoke.MethodHandle;
 import java.util.Optional;
@@ -29,18 +27,16 @@ public class FuseSymbolLookup implements SymbolLookup {
 
 	private final Linker linker = Linker.nativeLinker();
 	private final MethodHandle dlopen;
-	private final MethodHandle dlclose;
 	private final MethodHandle dlerror;
 	private final MethodHandle dlvsym;
 	private final MethodHandle dlsym;
-	private final AtomicReference<MemoryAddress> libHandle = new AtomicReference<>();
+	private final AtomicReference<MemorySegment> libHandle = new AtomicReference<>();
 
 	private FuseSymbolLookup() {
-		this.dlopen = linker.downcallHandle(linker.defaultLookup().lookup("dlopen").orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol dlopen")), DLOPEN);
-		this.dlclose = linker.downcallHandle(linker.defaultLookup().lookup("dlclose").orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol dlclose")), DLCLOSE);
-		this.dlerror = linker.downcallHandle(linker.defaultLookup().lookup("dlerror").orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol dlerror")), DLERROR);
-		this.dlvsym = linker.downcallHandle(linker.defaultLookup().lookup("dlvsym").orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol dlvsym")), DLVSYM);
-		this.dlsym = linker.downcallHandle(linker.defaultLookup().lookup("dlsym").orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol dlsym")), DLSYM);
+		this.dlopen = linker.downcallHandle(linker.defaultLookup().find("dlopen").orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol dlopen")), DLOPEN);
+		this.dlerror = linker.downcallHandle(linker.defaultLookup().find("dlerror").orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol dlerror")), DLERROR);
+		this.dlvsym = linker.downcallHandle(linker.defaultLookup().find("dlvsym").orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol dlvsym")), DLVSYM);
+		this.dlsym = linker.downcallHandle(linker.defaultLookup().find("dlsym").orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol dlsym")), DLSYM);
 	}
 
 	public static FuseSymbolLookup getInstance() {
@@ -51,21 +47,12 @@ public class FuseSymbolLookup implements SymbolLookup {
 		private static final FuseSymbolLookup INSTANCE = new FuseSymbolLookup();
 	}
 
-	public void open(String libPath, MemorySession session) {
-		try {
-			MemoryAddress handle = (MemoryAddress) dlopen.invokeExact((Addressable) session.allocateUtf8String(libPath), RTLD_NOW);
+	public void open(String libPath) {
+		try (var session = Arena.ofConfined()) {
+			MemorySegment handle = (MemorySegment) dlopen.invokeExact(session.allocateFrom(libPath), RTLD_NOW);
 			libHandle.set(handle);
-			session.addCloseAction(this::close);
 		} catch (Throwable e) {
 			throw new AssertionError(e);
-		}
-	}
-
-	private void close() {
-		try {
-			dlclose.invokeExact((Addressable) libHandle.getAndSet(null));
-		} catch (Throwable e) {
-			throw new RuntimeException(e);
 		}
 	}
 
@@ -75,30 +62,30 @@ public class FuseSymbolLookup implements SymbolLookup {
 	 * @param nameAndVersion the symbol name and version separated by '@'.
 	 */
 	@Override
-	public Optional<MemorySegment> lookup(String nameAndVersion) {
+	public Optional<MemorySegment> find(String nameAndVersion) {
 		var handle = libHandle.get();
 		if (handle == null) {
 			return Optional.empty();
 		}
 		var sep = nameAndVersion.indexOf('@');
-		try (var session = MemorySession.openConfined()) {
-			MemoryAddress addr = MemoryAddress.NULL;
+		try (var session = Arena.ofConfined()) {
+			MemorySegment addr = MemorySegment.NULL;
 			if(sep != -1) {
 				String name = nameAndVersion.substring(0, sep);
 				String version = nameAndVersion.substring(sep + 1);
-				addr = (MemoryAddress) dlvsym.invokeExact((Addressable) handle, (Addressable) session.allocateUtf8String(name),(Addressable) session.allocateUtf8String(version));
+				addr = (MemorySegment) dlvsym.invokeExact(handle, session.allocateFrom(name),session.allocateFrom(version));
 			}
 
-			if(MemoryAddress.NULL.equals(addr)) {
-				addr = (MemoryAddress) dlsym.invokeExact((Addressable) handle, (Addressable) session.allocateUtf8String(nameAndVersion));
+			if(MemorySegment.NULL.equals(addr)) {
+				addr = (MemorySegment) dlsym.invokeExact(handle, session.allocateFrom(nameAndVersion));
 			}
 
-			if (MemoryAddress.NULL.equals(addr)) {
-				var error = (MemoryAddress) dlerror.invokeExact();
-				System.err.println("dlvsym failed for symbol " + nameAndVersion + ": " + error.getUtf8String(0));
+			if (MemorySegment.NULL.equals(addr)) {
+				var error = (MemorySegment) dlerror.invokeExact();
+				System.err.println("dlvsym failed for symbol " + nameAndVersion + ": " + error.getString(0));
 				return Optional.empty();
 			} else {
-				return Optional.of(MemorySegment.ofAddress(addr, 0, MemorySession.global()));
+				return Optional.of(addr);
 			}
 		} catch (Throwable e) {
 			return Optional.empty();
